Enabled iOS build target

--- a/UdonScripts/LocalPoliceDepartment.Utilities.AccountManager.Udon.asmdef
+++ b/UdonScripts/LocalPoliceDepartment.Utilities.AccountManager.Udon.asmdef
@@ -12,6 +12,7 @@
     "includePlatforms": [
         "Android",
         "Editor",
+        "iOS",
         "WindowsStandalone32",
         "WindowsStandalone64"
     ],
