--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "com.localpolicedepartment.accountmanager",
-  "version": "3.1.0",
-  "displayName": "Account Manager",
-  "description": "Account manager is a tool for converting spreadsheet data, via csv, into arrays for easy access by udonbehavours within VRChat.",
-  "unity": "2019.4",
-  "unityRelease": "31f1",
+  "name": "com.4liced.accountmanager",
+  "version": "4.0.0-beta.1",
+  "displayName": "4liceD Account Manager",
+  "description": "A neutral-branded, community-maintained fork of the Account Manager for converting CSV/JSON account data into VRChat-usable Udon data.",
+  "unity": "2022.3",
+  "unityRelease": "22f1",
   "keywords": [
     "VRChat",
-    "LPD"
+    "Account Manager",
+    "Udon"
   ],
   "author": {
-    "name": "Loli Police Department",
-    "url": "https://discord.gg/lpd"
+    "name": "4liceD",
+    "url": "https://github.com/4liced"
   },
-  "vpmDependencies" : {
-    "com.vrchat.base" : "^3.4",
-    "com.vrchat.worlds" : "^3.4"
+  "vpmDependencies": {
+    "com.vrchat.base": "^3.4",
+    "com.vrchat.worlds": "^3.4"
   }
 }
