--- a/.github/workflows/trigger-repo-rebuild.yml
+++ b/.github/workflows/trigger-repo-rebuild.yml
@@ -16,8 +16,8 @@ jobs:
           github-token: ${{ secrets.VPM_LISTING }}
           script: |
             await github.rest.actions.createWorkflowDispatch({
-              owner: 'swiveI',
-              repo: 'LPD-Tools',
+              owner: '4liced',
+              repo: 'vpm-listing',
               workflow_id: 'build-listing.yml',
               ref: 'main',
             })
